Upgrade to Java 17, Micronaut 4.1.2 and Oracle GraalVM 17.0.8